--- a/Kiosk.App/Kiosk.App.csproj
+++ b/Kiosk.App/Kiosk.App.csproj
@@ -7,4 +7,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Kiosk.Test</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
