--- a/Kiosk.Test/Kiosk.Test.csproj
+++ b/Kiosk.Test/Kiosk.Test.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kiosk.App\Kiosk.App.csproj" />
+  </ItemGroup>
+
 </Project>
