--- a/Kiosk.App/Kiosk.App.csproj
+++ b/Kiosk.App/Kiosk.App.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
+    <PackageReference Include="Unicode.net" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
