--- a/Kiosk.App/Kiosk.App.csproj
+++ b/Kiosk.App/Kiosk.App.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
     <PackageReference Include="Unicode.net" Version="2.0.0" />
   </ItemGroup>
